[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Fonts/PottaCopy.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprite/menu-background.png" type="Texture" id=2]
[ext_resource path="res://src/GUI/Settings.gd" type="Script" id=3]
[ext_resource path="res://assets/sprite/exit.png" type="Texture" id=4]
[ext_resource path="res://assets/sprite/musicON.png" type="Texture" id=5]
[ext_resource path="res://assets/sprite/soundON.png" type="Texture" id=6]
[ext_resource path="res://src/GUI/backgroundMusic.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sounds/soundClick.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "pulse"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 733.0, 527.0 ],
"_edit_use_anchors_": false
}

[node name="Menu-background" type="Sprite" parent="."]
position = Vector2( 987, 551 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.341176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 680.0
margin_top = 389.0
margin_right = 1068.0
margin_bottom = 502.0
rect_scale = Vector2( 1.5, 1.5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToHome" type="TextureButton" parent="."]
margin_left = 705.0
margin_top = 597.0
margin_right = 1144.0
margin_bottom = 726.0
rect_scale = Vector2( 1.2, 1.3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 521.0
margin_top = 693.0
margin_right = 641.0
margin_bottom = 773.0
custom_fonts/font = ExtResource( 1 )
text = "Som"

[node name="Music" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 514.0
margin_top = 488.0
margin_right = 722.0
margin_bottom = 568.0
custom_fonts/font = ExtResource( 1 )
text = "Música"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 700.0
margin_top = 178.0
margin_right = 1158.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 1 )
text = "Configurações"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 1464.0
margin_top = 105.0
margin_right = 1612.0
margin_bottom = 242.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/pulse = SubResource( 2 )

[node name="MusicButton" type="TextureButton" parent="."]
margin_left = 985.0
margin_top = 452.0
margin_right = 1117.0
margin_bottom = 603.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="."]
margin_left = 1005.0
margin_top = 672.0
margin_right = 1168.0
margin_bottom = 840.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BackgroundMusic" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_SoundButton_pressed"]
